[gd_scene load_steps=7 format=3 uid="uid://b8hjt2kqrctdn"]

[ext_resource type="Script" path="res://scenes/level_section/level_section.gd" id="1_axbry"]
[ext_resource type="Script" path="res://scenes/level_section/level_section_config.gd" id="2_83fpg"]
[ext_resource type="JSON" path="res://resources/level_sections/level_section_1.json" id="2_o50dy"]
[ext_resource type="PackedScene" uid="uid://nb7si673sijd" path="res://scenes/shared/resource_visualizer.tscn" id="4_a4nlc"]

[sub_resource type="Resource" id="Resource_o2s1a"]
script = ExtResource("2_83fpg")

[sub_resource type="Resource" id="Resource_88pik"]
script = ExtResource("2_83fpg")
json = ExtResource("2_o50dy")

[node name="LevelSection" type="Node2D"]
script = ExtResource("1_axbry")
config = SubResource("Resource_o2s1a")

[node name="ResourceVisualizer" parent="." node_paths=PackedStringArray("target") instance=ExtResource("4_a4nlc")]
target = NodePath("..")
method_name = "set_config"
resource = SubResource("Resource_88pik")

[node name="EditorHintRoot" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="EditorHintRoot"]
offset_right = 320.0
offset_bottom = 180.0
color = Color(0, 0.666667, 1, 0.196078)

[node name="LeftLevel" type="ColorRect" parent="EditorHintRoot"]
offset_left = -16.0
offset_right = 16.0
offset_bottom = 8.0
color = Color(1, 0, 1, 0.196078)

[node name="RightLevel" type="ColorRect" parent="EditorHintRoot"]
offset_left = 304.0
offset_right = 336.0
offset_bottom = 8.0
color = Color(1, 0, 1, 0.196078)

[node name="SpawnersRoot" type="Node2D" parent="."]
unique_name_in_owner = true
